# scald

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/ai-service/: pyproject.toml
apps/ai-service/src/agents/: decision_support_agent.py
apps/ai-service/src/utils/: locale.py
apps/api/: alembic.ini  pyproject.toml
apps/api/src/: main.py
apps/api/src/api/v1/endpoints/efct/: climate.py  indicators.py  scores.py  submissions.py
apps/api/src/core/config/: settings.py
apps/api/src/db/: base.py  session.py
apps/api/src/db/migrations/: env.py
apps/api/src/db/migrations/versions/: 0001_initial_schema.py  0002_efct_module.py
apps/api/src/db/models/: __init__.py  audit.py  base.py  efct.py  enums.py  indicator.py  iot.py  municipality.py  observation.py  survey.py  user.py
apps/api/src/db/repositories/: __init__.py  base.py  observation.py
apps/api/src/db/seed/: indicators.py  iot_sensors.py  municipalities.py  observations.py  run_all.py  surveys.py  users.py
apps/api/src/schemas/: __init__.py  auth.py  base.py  indicator.py  iot.py  municipality.py  observation.py
apps/api/src/schemas/efct/: __init__.py  climate.py  indicator.py  score.py  submission.py
apps/api/src/services/efct/: calculator.py  climate_fetcher.py  imputer.py  normalizer.py
apps/api/src/workers/tasks/: celery_app.py  efct_climate_tasks.py  efct_score_tasks.py
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/messages/el/: common.json
apps/web/messages/en/: common.json
apps/web/messages/mk/: common.json
apps/web/messages/ro/: common.json
apps/web/messages/tr/: common.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css
apps/web/src/app/[locale]/: layout.tsx  page.tsx
apps/web/src/components/accessibility/: SkipToMain.tsx
apps/web/src/lib/i18n/: request.ts
apps/web/src/types/: database.ts
docs/architecture/: ARCHITECTURE.md
infrastructure/docker/: docker-compose.yml
infrastructure/postgres/init/: 01_extensions.sql
supabase/: seed.sql
supabase/migrations/: 001_initial_schema.sql
(+19 files in other folders)
