[tool.poetry]
name = "scald-ai-service"
version = "0.1.0"
description = "SCALD AI Service - Multilingual AI Assistant and Analytics"
authors = ["SCALD Team"]
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
anthropic = "^0.30.0"
langchain = "^0.2.0"
langchain-anthropic = "^0.1.0"
langchain-community = "^0.2.0"
langchain-postgres = "^0.0.9"
pgvector = "^0.3.0"
sentence-transformers = "^3.0.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
httpx = "^0.27.0"
redis = "^5.0.0"
babel = "^2.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
